poi markers added

--- a/app/src/main/res/menu/fave_locale_menu_items.xml
+++ b/app/src/main/res/menu/fave_locale_menu_items.xml
@@ -6,19 +6,6 @@
         android:id="@+id/food"
         android:title="Food">
 
-        <menu>
-            <item
-                android:id="@+id/foodfav1"
-                android:title="Add To Favs" />
-
-            <item
-                android:id="@+id/foodfav2"
-                android:title="Add To Favs" />
-
-            <item
-                android:id="@+id/foodfav3"
-                android:title="Add To Favs" />
-        </menu>
     </item>
 
 
@@ -26,38 +13,12 @@
         android:id="@+id/hospitals"
         android:title="Hospitals">
 
-        <menu>
-            <item
-                android:id="@+id/hospitalfav1"
-                android:title="Add To Favs" />
-
-            <item
-                android:id="@+id/hospitalfav2"
-                android:title="Add To Favs" />
-
-            <item
-                android:id="@+id/hospitalfav3"
-                android:title="Add To Favs" />
-        </menu>
     </item>
 
     <item
-        android:id="@+id/entertainment"
-        android:title="Entertainment">
+        android:id="@+id/churches"
+        android:title="Churches">
 
-        <menu>
-            <item
-                android:id="@+id/entertainmentfav1"
-                android:title="Add To Favs" />
-
-            <item
-                android:id="@+id/entertainmentfav2"
-                android:title="Add To Favs" />
-
-            <item
-                android:id="@+id/entertainmentfav3"
-                android:title="Add To Favs" />
-        </menu>
     </item>
 
 
